--- a/index.html
+++ b/index.html
@@ -56,10 +56,11 @@
         <h3 class="page-header text-center">Who is a Nurse ?</h3>
         <dl>
 <dt><span class="lead">| n&#x0259rse |</span></dt>
-            <dd>A nurse is a person who is trained to give care (help) to people who are sick or injured. Nurses work with doctors and other health care workers to make patients well (not sick) and to keep them fit and healthy</dd>
+            <dd>A nurse is a person who is trained to give care (help) to people who are sick or injured. Nurses work with doctors and other health care workers to make patients well (not sick) and to keep them fit and healthy.</dd>
         </dl>
-
-        <p></p>
+        <p>Registered nurses provide and coordinate patient care, educate patients and the public about
+            various health conditions, and provide advice and emotional support to patients and their family
+            members.</p>
     </section>
 
 </div>
