--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         </div>
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav navbar-right text-right" style="z-index: 9999999999999">
+            <ul class="nav navbar-nav navbar-right text-right" style="z-index: 9999999999999" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                 <li class="active"><a href="#about">About<span class="sr-only">(current)</span></a></li>
-                <li><a href="#">Duties</a></li>
+                <li><a href="#duties">Duties</a></li>
                 <li><a href="#">Patient Groups</a></li>
                 <li><a href="#">Work Environment</a></li>
                 <li><a href="#">Salary</a></li>
@@ -62,8 +62,26 @@
             various health conditions, and provide advice and emotional support to patients and their family
             members.</p>
     </section>
+</div>
+<div class="duties" id="duties">
+    <div class="page-header text-center callout">
+        <div class="duty-head">
+        <h3>Duties</h3>
+        </div>
+    </div>
+    <section class="container">
+
+        <dl>
+            <dt><span class="lead">| n&#x0259rse |</span></dt>
+            <dd>A nurse is a person who is trained to give care (help) to people who are sick or injured. Nurses work with doctors and other health care workers to make patients well (not sick) and to keep them fit and healthy.</dd>
+        </dl>
+        <p>Registered nurses provide and coordinate patient care, educate patients and the public about
+            various health conditions, and provide advice and emotional support to patients and their family
+            members.</p>
+    </section>
 
 </div>
+
 
 <script src="jquery.min.js"></script>
 <script src="bootstrap.min.js"></script>
