--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <li><a href="#duties">Duties</a></li>
                 <li><a href="#">Patient Groups</a></li>
                 <li><a href="#">Work Environment</a></li>
+                <li><a href="#">Job Outlook</a></li>
                 <li><a href="#">Salary</a></li>
             </ul>
         </div>
@@ -71,13 +72,18 @@
     </div>
     <section class="container">
 
-        <dl>
-            <dt><span class="lead">| n&#x0259rse |</span></dt>
-            <dd>A nurse is a person who is trained to give care (help) to people who are sick or injured. Nurses work with doctors and other health care workers to make patients well (not sick) and to keep them fit and healthy.</dd>
-        </dl>
-        <p>Registered nurses provide and coordinate patient care, educate patients and the public about
-            various health conditions, and provide advice and emotional support to patients and their family
-            members.</p>
+        <p>The duties of nurses include:</p>
+        <ul class="list-group">
+            <li class="list-group-item">Record patient’s medical histories and symptoms.</li>
+            <li class="list-group-item">Administer patients’ medicines and treatment.</li>
+            <li class="list-group-item">Set up plans for patients’ care or contribute to existing plans.</li>
+            <li class="list-group-item">Observe patients and record the observations.</li>
+            <li class="list-group-item">Consult and collaborate with doctors and other healthcare professionals.</li>
+            <li class="list-group-item">Operate and monitor medical equipments.</li>
+            <li class="list-group-item">Help perform diagnostic tests and analyze the results.</li>
+            <li class="list-group-item">Teach patients and their families how to manage illness or injuries.</li>
+            <li class="list-group-item">Explain what to do at home after treatment.</li>
+        </ul>
     </section>
 
 </div>
