--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             <ul class="nav navbar-nav navbar-right text-right" style="z-index: 9999999999999" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                 <li class="active"><a href="#about">About<span class="sr-only">(current)</span></a></li>
                 <li><a href="#duties">Duties</a></li>
-                <li><a href="#">Patient Groups</a></li>
-                <li><a href="#">Work Environment</a></li>
+                <li><a href="#patient-groups">Patient Groups</a></li>
+                <li><a href="#environment">Work Environment</a></li>
                 <li><a href="#">Job Outlook</a></li>
                 <li><a href="#">Salary</a></li>
             </ul>
@@ -56,23 +56,23 @@
     <section class="container">
         <h3 class="page-header text-center">Who is a Nurse ?</h3>
         <dl>
-<dt><span class="lead">| n&#x0259rse |</span></dt>
+            <dt><span class="lead">| n&#x0259rse |</span></dt>
             <dd>A nurse is a person who is trained to give care (help) to people who are sick or injured. Nurses work with doctors and other health care workers to make patients well (not sick) and to keep them fit and healthy.</dd>
+            <dd>Registered nurses provide and coordinate patient care, educate patients and the public about
+                various health conditions, and provide advice and emotional support to patients and their family
+                members.
+            </dd>
         </dl>
-        <p>Registered nurses provide and coordinate patient care, educate patients and the public about
-            various health conditions, and provide advice and emotional support to patients and their family
-            members.</p>
+
     </section>
 </div>
 <div class="duties" id="duties">
-    <div class="page-header text-center callout">
-        <div class="duty-head">
+    <div class="text-center callout">
         <h3>Duties</h3>
-        </div>
     </div>
     <section class="container">
 
-        <p>The duties of nurses include:</p>
+        <h4>The duties of nurses include:</h4>
         <ul class="list-group">
             <li class="list-group-item">Record patient’s medical histories and symptoms.</li>
             <li class="list-group-item">Administer patients’ medicines and treatment.</li>
@@ -84,9 +84,216 @@
             <li class="list-group-item">Teach patients and their families how to manage illness or injuries.</li>
             <li class="list-group-item">Explain what to do at home after treatment.</li>
         </ul>
-    </section>
 
+
+    </section>
 </div>
+<div id="patient-groups" class="">
+    <blockquote class="text-center">
+        <h3 class="lead">The great diversity in nursing provides ample opportunity to work with specific patient groups.</h3>
+    </blockquote>
+    <div class="container">
+        <div class="row text-left">
+            <div class="col-md-4 col-sm-4">
+                <div class="panel panel-primary">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Addiction</h3>
+                    </div>
+                    <div class="panel-body">
+                        Addiction nurses care for people who need help to overcome addiction.
+                    </div>
+                    <div class="panel-footer text-right text-muted">
+                        <small>
+                            Working with specific patient groups.
+                        </small>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-4">
+                <div class="panel panel-danger">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Cardiovascular</h3>
+                    </div>
+                    <div class="panel-body">
+                        Cardiovascular nurses care for patients with heart disease and people who have heart
+                        surgery.
+                    </div>
+                    <div class="panel-footer text-right text-muted">
+                        <small>
+                            Working with specific patient groups.
+                        </small>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-4">
+                <div class="panel panel-info">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Critical Care</h3>
+                    </div>
+                    <div class="panel-body">
+                        Critical care nurses work in intensive care units in hospitals, providing care to patients
+                        with serious, complex and acute illness and injuries that need very close monitoring and
+                        treatment.
+                    </div>
+                    <div class="panel-footer text-right text-muted">
+                        <small>
+                            Working with specific patient groups.
+                        </small>
+                    </div>
+                </div>
+            </div>
+            <div class="clearfix"></div>
+        </div>
+        <div class="row hidden-xs">
+            <div class="col-md-4 col-sm-4">
+                <div class="panel panel-success">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Genetic</h3>
+                    </div>
+                    <div class="panel-body">
+                        Genetic nurses provide screening, counseling and treatment for patients with genetic
+                        disorders such as cystic fibrosis.
+                    </div>
+                    <div class="panel-footer text-right text-muted">
+                        <small>
+                            Working with specific patient groups.
+                        </small>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 col-sm-4">
+                <div class="panel panel-warning">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Nenatology</h3>
+                    </div>
+                    <div class="panel-body">
+                        Neonatology nurses take care of newborn babies.
+                    </div>
+                    <div class="panel-footer text-right text-muted">
+                        <small>
+                            Working with specific patient groups.
+                        </small>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-4">
+                <div class="panel panel-primary">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Nephrology</h3>
+                    </div>
+                    <div class="panel-body">
+                        Nephrology nurses care for patients who have kidney-related issues stemming from
+                        diabetes, high blood pressure, substance abuse or other causes.
+                    </div>
+                    <div class="panel-footer text-right text-muted">
+                        <small>
+                            Working with specific patient groups.
+                        </small>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-12 text-center">
+            <button type="button" class="btn btn-default btn-lg" data-toggle="modal" data-target="#myModal">View More</button>
+        </div>
+    </div>
+</div>
+
+<div id="environment">
+    <div class="text-center callout">
+        <h3>The Work Environment</h3>
+    </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="modal fade" role="dialog" id="myModal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title text-capitalize">working with specific patient groups</h4>
+            </div>
+            <div class="modal-body" style="overflow-y: scroll;">
+                <ul class="list-group list-unstyled">
+
+                    <li class="list-group-item hidden-md hidden-sm hidden-lg">
+                        <h5 class="list-group-item-heading text-capitalize">Genetic Nurses</h5>
+                        <hr>
+                        <p class="list-group-item-text">
+                            Genetic nurses provide screening, counseling and treatment for patients with genetic
+                            disorders such as cystic fibrosis.
+                        </p>
+                    </li>
+                    <li class="list-group-item hidden-md hidden-sm hidden-lg">
+                        <h5 class="list-group-item-heading text-capitalize">Neonatology nurses</h5>
+                        <hr>
+                        <p class="list-group-item-text">
+                            Neonatology nurses take care of newborn babies.
+                        </p>
+                    </li>
+                    <li class="list-group-item hidden-md hidden-sm hidden-lg">
+                        <h5 class="list-group-item-heading text-capitalize">Nephrology nurses</h5>
+                        <hr>
+                        <p class="list-group-item-text">
+                            Nephrology nurse cares for patients who have kidney-related issues stemming from
+                            diabetes, high blood pressure, substance abuse or other causes.
+                        </p>
+                    </li>
+
+
+                    <li class="list-group-item">
+                        <h5 class="list-group-item-heading text-capitalize">Rehabilitation nurses</h5>
+                        <hr>
+                        <p class="list-group-item-text">
+                            Rehabilitation nurses care for patients with temporary or permanent disabilities.
+                            Registered nurses may work to promote public health by educating people on warning signs
+                            and symptoms of diseases or managing chronic health conditions. They may also run health
+                            screenings, immunization clinics, blood drives or other community outreach programs.
+                        </p>
+                    </li>
+                    <li class="list-group-item">
+                        <h5 class="list-group-item-heading text-capitalize">Clinical nurse specialists (CNS)</h5>
+                        <hr>
+                        <p class="list-group-item-text">
+                            Clinical nurse specialists (CNS) are types of Advanced Practice Registered Nurse
+                            (APRN). They are provide direct patient care in one of many nursing specialties such as
+                            psychiatric-mental or pediatrics. CNSs also provide indirect care by working with other
+                            nurses and various other staff to improve the quality of care that patients receive. They
+                            often serve in leadership roles and may educate and advise other nursing staff. CNSs
+                            also may conduct research and may advocate for certain policies.
+                        </p>
+                    </li>
+                </ul>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
 
 
 <script src="jquery.min.js"></script>
