--- a/index.html
+++ b/index.html
@@ -204,7 +204,8 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-12 text-center">
+        <div class="col-md-12 text-center" style="margin-bottom: 50px;">
+            <hr>
             <button type="button" class="btn btn-default btn-lg" data-toggle="modal" data-target="#myModal">View More</button>
         </div>
         <hr>
@@ -249,10 +250,37 @@
             <p>Nurses care for patients from different age groups( old or young), different cultures different
                 socioeconomic status.</p>
         </article>
+        <hr>
     </section>
 </div>
-<hr>
-<div id="salary">
+
+<div id="salary" style="margin-top: 40px;">
+        <section class="container">
+            <h3 class="page-header text-center">Salary</h3>
+            <ul class="list-group">
+                <li class="list-group-item">
+                    <span class="badge">&dollar; 73,980</span>
+                    Government
+                </li>
+                <li class="list-group-item">
+                    <span class="badge">&dollar; 70,590</span>
+                    Hospitals; State, Local, Private
+                </li>
+                <li class="list-group-item">
+                    <span class="badge">&dollar; 64,140</span>
+        Home health care services
+                </li>
+                <li class="list-group-item">
+                    <span class="badge">&dollar; 61,730</span>
+                    Offices of Physicians
+                </li>
+                <li class="list-group-item">
+                    <span class="badge">&dollar; 60,950</span>
+                    Nursing and residential care facilities
+                </li>
+            </ul>
+
+        </section>
 
 </div>
 
