--- a/index.html
+++ b/index.html
@@ -205,8 +205,9 @@
             </div>
         </div>
         <div class="col-md-12 text-center" style="margin-bottom: 50px;">
-            <hr>
-            <button type="button" class="btn btn-default btn-lg" data-toggle="modal" data-target="#myModal">View More</button>
+            <br>
+            <div class="clearfix"></div>
+            <button type="button" class="btn btn-default btn-lg btn-block" data-toggle="modal" data-target="#myModal">View More</button>
         </div>
         <hr>
     </div>
