--- a/index.html
+++ b/index.html
@@ -358,7 +358,10 @@
     $(document).ready(function () {
         $("ul.nav a").smoothScroll({
             speed: 1000
-        })
+        });
+        $(".navbar-header a").smoothScroll({
+            speed: 1000
+        });
     });
 </script>
 </body>
